try to solve hamburger visibility when rescale

--- a/ressources/css/menu.css
+++ b/ressources/css/menu.css
@@ -22,15 +22,12 @@ body {
 .menu_button_container{
     visibility: hidden;
     position: absolute;
-    left: -500px;
 }
 .menu-btn {
     z-index: 3;
     position: absolute;
     visibility: hidden;
     display: flex;
-    text-align: right;
-    right: 0px;
     margin-left: 10px;
     align-items: center;
     width: 3.5em;
